--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,1 +1,7 @@
-<p>articles works!</p>
+<div>
+  <ul>
+    <li *ngFor="let article of articles">
+      {{article.name}}
+    </li>
+  </ul>
+</div>
