--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,7 +1,22 @@
-<div>
-  <ul>
-    <li *ngFor="let article of articles">
-      {{article.name}}
-    </li>
-  </ul>
+<div class="container article-list">
+  <div class="row">
+    <div class="col-4" *ngFor="let article of articles">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">
+            {{article.name}}
+          </h5>
+          <p class="card-text">
+            {{article.description}}
+          </p>
+          <a routerLink="/articles/{{article.id}}" class="btn btn-primary">
+            See details
+          </a>
+        </div>
+        <div class="card-footer text-muted">
+          <i *ngFor="let stars of ratingAsStars(article.rating)" class="material-icons">stars</i>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
