--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,6 +1,11 @@
-<div class="container article-list">
+<div class="container">
   <div class="row">
-    <div class="col-4" *ngFor="let article of articles">
+    <a routerLink="/article/create" class="btn btn-primary">
+      Add an article
+    </a>
+  </div>
+  <div class="row article-list">
+    <div class="col-4 article-card" *ngFor="let article of articles">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">
@@ -14,7 +19,14 @@
           </a>
         </div>
         <div class="card-footer text-muted">
-          <i *ngFor="let stars of ratingAsStars(article.rating)" class="material-icons">stars</i>
+          <div class="row">
+            <div class="col-10">
+              <i *ngFor="let stars of ratingAsStars(article.rating)" class="material-icons">stars</i>
+            </div>
+            <div class="col-2">
+              <i class="material-icons delete-button" (click)="delete(article.id)">delete</i>
+            </div>
+          </div>
         </div>
       </div>
     </div>
