--- a/src/app/menu-navbar/menu-navbar.component.html
+++ b/src/app/menu-navbar/menu-navbar.component.html
@@ -1,5 +1,4 @@
-<script src="../../../../MyPartnerAngular/src/app/navbar/navbar.component.ts"></script>
-<nav class="navbar navbar-expand-lg bg-light navbar-light">
+<nav class="navbar navbar-expand-lg bg-light navbar-light custom-navbar">
   <a class="navbar-brand" routerLink="/articles">Articles</a>
   <a class="navbar-brand" routerLink="/tips">Life pro tips</a>
 </nav>
