--- a/src/app/article-detail/article-detail.component.html
+++ b/src/app/article-detail/article-detail.component.html
@@ -1,7 +1,19 @@
 <div class="container">
-  <div *ngIf="article" class="card">
-    <h1>{{article.name}}</h1>
+  <div *ngIf="article" class="card article-detail-card">
+    <div class="row">
+      <h1 class="col-10">{{article.name}}</h1>
+      <div class="col-2">
+        <i *ngFor="let stars of ratingAsStars()" class="material-icons">stars</i>
+      </div>
+    </div>
     <br>
     <p>{{article.description}}</p>
+    <div class="row">
+      <div class="col text-center">
+        <a href="{{article.url}}" target="_blank" class="btn btn-primary ">
+          Link to the article
+        </a>
+      </div>
+    </div>
   </div>
 </div>
