--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -5,18 +5,22 @@
     </a>
   </div>
   <div class="row article-list">
-    <div class="col-4 article-card" *ngFor="let article of articles">
+    <div class="col-md-4 col-sm-12 article-card" *ngFor="let article of articles">
       <div class="card">
-        <div class="card-body">
+        <div class="article-header text-muted">
           <h5 class="card-title">
             {{article.name}}
           </h5>
-          <p class="card-text">
+        </div>
+        <div class="card-body article-body">
+          <p class="card-text article-description">
             {{article.description}}
           </p>
-          <a routerLink="/articles/{{article.id}}" class="btn btn-primary">
-            See details
-          </a>
+          <div class="article-detail-link">
+            <a routerLink="/articles/{{article.id}}" class="btn btn-primary">
+              See details
+            </a>
+          </div>
         </div>
         <div class="card-footer text-muted">
           <div class="row">
