--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,37 +1,32 @@
 <div class="container">
-  <div class="row">
-    <a routerLink="/article/create" class="btn btn-primary">
-      Add an article
-    </a>
-  </div>
+  <a routerLink="/article/create" class="btn btn-primary">
+    Add an article
+  </a>
   <div class="row article-list">
     <div class="col-md-4 col-sm-12 article-card" *ngFor="let article of articles">
       <div class="card">
-        <div class="article-header text-muted">
-          <h5 class="card-title">
-            {{article.name}}
-          </h5>
-        </div>
-        <div class="card-body article-body">
-          <p class="card-text article-description">
-            {{article.description}}
-          </p>
-          <div class="article-detail-link">
-            <a routerLink="/articles/{{article.id}}" class="btn btn-primary">
-              See details
-            </a>
+        <a routerLink="/articles/{{article.id}}">
+          <div class="article-header text-muted">
+            <h5 class="card-title">
+              {{article.name}}
+            </h5>
           </div>
-        </div>
-        <div class="card-footer text-muted">
-          <div class="row">
-            <div class="col-10">
-              <i *ngFor="let stars of ratingAsStars(article.rating)" class="material-icons">stars</i>
-            </div>
-            <div class="col-2">
-              <i class="material-icons delete-button" (click)="delete(article.id)">delete</i>
+          <div class="card-body article-body">
+            <p class="card-text article-description">
+              {{article.description}}
+            </p>
+          </div>
+          <div class="card-footer text-muted">
+            <div class="row">
+              <div class="col-10">
+                <i *ngFor="let stars of ratingAsStars(article.rating)" class="material-icons">stars</i>
+              </div>
+              <div class="col-2">
+                <i class="material-icons delete-button" (click)="delete(article.id)">delete</i>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
   </div>
