--- a/src/app/menu-navbar/menu-navbar.component.html
+++ b/src/app/menu-navbar/menu-navbar.component.html
@@ -1,4 +1,11 @@
-<nav class="navbar navbar-expand-lg bg-light navbar-light custom-navbar">
-  <a class="navbar-brand" routerLink="/articles">Articles</a>
-  <a class="navbar-brand" routerLink="/tips">Life pro tips</a>
+<nav class="custom-navbar">
+  <a routerLink="/articles">
+    <h2>Remember me</h2>
+  </a>
+  <div class="nav-links">
+    <a routerLink="/articles">Articles</a>
+    <a routerLink="/tips">Life pro tips</a>
+    <a routerLink="/sites">Websites</a>
+    <a routerLink="/quotes">Quotes</a>
+  </div>
 </nav>
