[FEATURE] Add registration

--- a/src/app/menu-navbar/menu-navbar.component.html
+++ b/src/app/menu-navbar/menu-navbar.component.html
@@ -7,5 +7,6 @@
     <a routerLink="/tips">Life pro tips</a>
     <a routerLink="/sites">Websites</a>
     <a routerLink="/quotes">Quotes</a>
+    <a routerLink="/register">Register</a>
   </div>
 </nav>
