--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,5 +1,5 @@
-<form [formGroup]="registrationForm"
-      (ngSubmit)="onSubmit(registrationForm.value)" class="authentication-form">
+<form [formGroup]="loginForm"
+      (ngSubmit)="onSubmit(loginForm.value)" class="authentication-form">
   <div class="form-group input-field">
     <label for="email">
       Email:
@@ -12,15 +12,9 @@
     </label>
     <input class="form-control" type="password" id="password" formControlName="password">
   </div>
-  <div class="form-group input-field">
-    <label for="confirm-password">
-      Confirm password:
-    </label>
-    <input class="form-control" type="password" id="confirm-password" formControlName="confirm_password">
-  </div>
   <div class="row">
     <div class="col text-center">
-      <button class="btn btn-success authentication-submit" type="submit">Register</button>
+      <button class="btn btn-success authentication-submit" type="submit">Login</button>
     </div>
   </div>
 </form>
