--- a/src/app/authentication/registration/registration.component.css
+++ b/src/app/authentication/registration/registration.component.css
@@ -1,55 +1,3 @@
-body {
-  background-color: #999999!important;
-}
-
-.registration-section {
-  margin: 1rem;
-  text-align: center;
-  max-width: 60%;
-  background-color: rgba(68, 72, 79, 0.56);
-  padding: 0;
-  border-radius: 15px;
-  color: white;
-}
-
-.registration-header > div {
-  opacity: 0.2;
-}
-
-.active-form {
-  font-weight: bold;
-  font-size: 1.2rem;
-  opacity: 1 !important;
-  color: black;
-}
-
-.registration-header > div {
-  padding: 1rem 0 1rem;
-}
-
-.registration-form {
-  padding-top: 1rem;
+.authentication-form {
   background-color: rgba(38, 132, 232, 0.9);
-  color: white;
-  border-radius: 15px;
-}
-
-.registration-button {
-  border-right: 1px solid black;
-}
-
-.login-button {
-  border-left: 1px solid black;
-}
-
-.registration-button:hover, .login-button:hover {
-  cursor: pointer;
-}
-
-.input-field {
-  margin: 0 2rem 2rem 2rem;
-}
-
-.register-submit {
-  margin-bottom: 2rem;
 }
