[REFACTO] Group article components in one module

--- a/src/app/article/article-detail/article-detail.component.html
+++ b/src/app/article/article-detail/article-detail.component.html
@@ -8,6 +8,6 @@
     <app-read-only-article [article]="article"></app-read-only-article>
   </div>
   <div *ngIf="article && editMode">
-    <app-create-article [article]="article" [editMode]="editMode" (hasSavedChanges)="onSave($event)"></app-create-article>
+    <app-save-article [article]="article" [editMode]="editMode" (hasSavedChanges)="onSave($event)"></app-save-article>
   </div>
 </div>
