[REFACTO] Create utility methods to ease testing

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -22,7 +22,10 @@
   </div>
   <div class="row">
     <div class="col text-center">
-      <button class="btn btn-success authentication-submit" type="submit" [disabled]="!loginForm.valid">Login</button>
+      <button class="btn btn-success authentication-submit" id="login-button" type="submit"
+              [disabled]="!loginForm.valid">
+        Login
+      </button>
     </div>
   </div>
 </form>
