Add buildspec.yml file

--- a/src/app/menu-navbar/menu-navbar.component.html
+++ b/src/app/menu-navbar/menu-navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="custom-navbar">
   <a routerLink="/articles">
-    <h2>Remember me</h2>
+    <h2>Remember me - With CD!</h2>
   </a>
   <div class="nav-links">
     <a routerLink="/articles">Articles</a>
