--- a/src/app/article/save-article/save-article.component.html
+++ b/src/app/article/save-article/save-article.component.html
@@ -27,7 +27,15 @@
       <label for="url">
         URL:
       </label>
-      <input class="form-control" type="text" id="url" formControlName="url">
+      <input class="form-control" type="text" id="url" formControlName="url" required>
+      <div class="alert alert-danger" [hidden]="!(url.invalid && url.touched)" id="url-errors-create-article">
+        <div *ngIf="url.errors?.required" id="required-url-create-article">
+          URL is required.
+        </div>
+        <div *ngIf="url.errors?.pattern" id="invalid-url-create-article">
+          Please provide a valid url.
+        </div>
+      </div>
     </div>
     <div class="form-group">
       <label for="rating">
