--- a/src/app/article/save-article/save-article.component.html
+++ b/src/app/article/save-article/save-article.component.html
@@ -45,7 +45,7 @@
     </div>
     <div class="row">
       <div class="col text-center">
-        <button class="btn btn-success" type="submit">Save</button>
+        <button class="btn btn-success" type="submit" id="submit">Save</button>
       </div>
     </div>
   </form>
