Use local storage for article service

--- a/src/app/article/articles/articles.component.html
+++ b/src/app/article/articles/articles.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <a routerLink="/article/create" class="btn btn-primary">
+  <a routerLink="/article/create" class="btn btn-primary" id="add_article">
     Add an article
   </a>
   <div class="row article-list">
