--- a/src/app/article/delete-article/delete-article.component.html
+++ b/src/app/article/delete-article/delete-article.component.html
@@ -1,3 +1,3 @@
-<i class="material-icons delete-button" id="delete-article-{{article.id}}" (click)="delete(article.id)">
+<i class="material-icons delete-button" id="delete-article-{{article.id}}" (click)="delete()">
   delete
 </i>
