Rename all references to article to resource

--- a/src/app/menu-navbar/menu-navbar.component.html
+++ b/src/app/menu-navbar/menu-navbar.component.html
@@ -1,9 +1,9 @@
 <nav class="custom-navbar">
-  <a routerLink="/articles">
+  <a routerLink="/resources">
     <h2>Remember me</h2>
   </a>
   <div class="nav-links">
-    <a routerLink="/articles">Articles</a>
+    <a routerLink="/resources">Resources</a>
     <a routerLink="/tips">Life pro tips</a>
     <a routerLink="/sites">Websites</a>
     <a routerLink="/quotes">Quotes</a>
