--- a/src/app/resource/save-resource/save-resource.component.html
+++ b/src/app/resource/save-resource/save-resource.component.html
@@ -50,6 +50,7 @@
         </div>
       </div>
     </div>
+    <app-add-tag [tags]="resourceForm.get('tags')"></app-add-tag>
     <div class="row">
       <div class="col text-center">
         <button class="btn btn-success" type="submit" id="submit">Save</button>
