--- a/src/app/resource/resources/resources.component.html
+++ b/src/app/resource/resources/resources.component.html
@@ -21,7 +21,9 @@
           <div class="row">
             <div class="col-md-9">
               <div class="col-md-12 tags">
-                {{ resource.tags }}
+                <span *ngFor="let tag of resource.tags" class="badge badge-pill badge-secondary tag-badge">
+                  {{ tag.name }}
+                </span>
               </div>
               <div class="col-12">
                 <i *ngFor="let stars of ratingAsStars(resource.rating)" class="material-icons">stars</i>
