Try setup nginx

--- a/src/app/menu-navbar/menu-navbar.component.html
+++ b/src/app/menu-navbar/menu-navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="custom-navbar">
   <a routerLink="/resources">
-    <h2>Remember me</h2>
+    <h2>Remember me - ^/api</h2>
   </a>
   <div class="nav-links">
     <a routerLink="/resources">Resources</a>
