--- a/src/app/resource/resources/resources.component.html
+++ b/src/app/resource/resources/resources.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <a routerLink="/resource/create" class="btn btn-primary" id="add-resource">
-    Add a resource
+    Add a resource nginx in prod --
   </a>
   <div class="row resource-list">
     <div class="col-md-4 col-sm-12 resource-card" *ngFor="let resource of resources">
