Remove Nginx and update API url

--- a/src/app/menu-navbar/menu-navbar.component.html
+++ b/src/app/menu-navbar/menu-navbar.component.html
@@ -1,12 +1,10 @@
 <nav class="custom-navbar">
   <a routerLink="/resources">
-    <h2>Remember me - ^/api</h2>
+    <h2>Remember me</h2>
   </a>
   <div class="nav-links">
     <a routerLink="/resources">Resources</a>
-    <a routerLink="/tips">Life pro tips</a>
-    <a routerLink="/sites">Websites</a>
-    <a routerLink="/quotes">Quotes</a>
+    <a routerLink="/tags">Tags</a>
     <a routerLink="/register">Register</a>
   </div>
 </nav>
