Display username when user is logged in

--- a/src/app/menu-navbar/menu-navbar.component.html
+++ b/src/app/menu-navbar/menu-navbar.component.html
@@ -5,6 +5,6 @@
   <div class="nav-links">
     <a routerLink="/resources">Resources</a>
     <a routerLink="/tags">Tags</a>
-    <a routerLink="/register">Register</a>
+    <a routerLink="/register">{{ authenticationLink }}</a>
   </div>
 </nav>
